--- a/index.css
+++ b/index.css
@@ -154,14 +154,14 @@
     overflow: hidden;
   }
   .carousel-container{
-    margin-bottom:4em ;
+    margin-bottom:5em ;
   }
   
   .carousel_item {
     position: relative;
     min-width: 100%;
     height: 100vh;
-    transition: all 0.5s linear;
+    transition: all 1s linear;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -217,7 +217,11 @@
       cursor: pointer;
       font-size: 24px;
     }
-
+.bg-tr{
+  height: 100%;
+  background: rgb(0, 0, 0,0.52);
+  color: #fcdede;
+}
     /* multiple carousel */
 
     .multi-item-carousel{
@@ -286,8 +290,7 @@
       justify-content: space-between;
       height: 20rem;
       width: 100%;
-      margin-top: 4em;
-      margin-bottom: 3em;
+      margin: 4em 0;
     }
     .about-sub{
         display: flex;
