--- a/index.css
+++ b/index.css
@@ -110,7 +110,7 @@
     z-index: 100;
   }
   .menu li a:hover{
-    color: #9f0000;
+    color: #E00000;
     text-decoration: none;
   }
   
@@ -125,8 +125,11 @@
     color: darkgray;
     position: absolute;
   }
+  .login a i:hover{
+    color: #E00000;
+  }
   .login a i{
-    color: darkgray;
+    color: #515551;
   }
   /* DROPDOWN MENU */
   .services {
@@ -309,7 +312,8 @@
       justify-content: center;
       height: 20rem;
       width: 100%;
-      margin: 4rem 0;
+      margin-top: 2rem;
+      margin-bottom: 8rem;
     }
     .about-sub{
         display: flex;
@@ -443,7 +447,7 @@ ul {
 }
 @media(max-width: 800px) {
 	.container2{
-    margin-top: 450px;
+    margin-top: 440px;
   }
 }
 /* humburger code */
@@ -454,6 +458,10 @@ ul {
   background: none;
   border: none;
   cursor: pointer;
+  z-index: 100;
+  /* position: relative; */
+  /* right: -14em; */
+  
 }
 
 @media only screen and (max-width: 900px) {
@@ -494,5 +502,43 @@ ul {
       right: 0;
       margin-top: 1rem;
   }
+
   
 }
+
+
+.mobile{
+  /* position: absolute; */
+  /* display: none; */
+  /* opacity: 0; */
+}
+.response{
+  
+  display: flex;
+  justify-content: center;
+  border-radius: 1em;
+  align-items: center;
+  flex-direction: column;
+  background-color: grey;
+  position: relative;
+  z-index: 1;
+  width: 30em;
+  height: 40rem;
+  top:6.5em;
+  right: 1em;
+  /* display: none; */
+}
+.response-item{
+ font-size: 2em;
+ color:#fff;
+ 
+}
+.response-item:hover{
+  text-decoration: none;
+}
+
+
+
+
+
+
