--- a/index.css
+++ b/index.css
@@ -450,6 +450,10 @@ ul {
 	.footer{
     height: 54rem;
   }
+  .footer-col {
+    width: 25%;
+    padding: 0 7rem;
+  }
 }
 @media(max-width: 322px) {
 	.footer{
