--- a/index.css
+++ b/index.css
@@ -474,6 +474,9 @@ ul {
     width: 25%;
     padding: 0 7rem;
   }
+  .footer-col ul li a {
+    width: 7em;
+  }
   .container2{
     margin-top: 300px;
   }
@@ -593,6 +596,7 @@ ul {
   height: 45rem;
   top:6.5em;
   right: 1em;
+  opacity: 0.93;
   /* display: none; */
 }
 .response-item{
